// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssetPickerModal token filtering should fetch metadata for unlisted tokens 1`] = `
[
  "0x1f9840a85d5af5bf1d1762f925bdaddc4201f123",
  true,
  {
    "current": null,
  },
  "0xa",
]
`;

exports[`AssetPickerModal token filtering should fetch metadata for unlisted tokens 2`] = `
[
  {
    "asset": undefined,
    "assetItemProps": {
      "isTitleHidden": false,
      "isTitleNetworkName": false,
    },
    "handleAssetChange": [Function],
    "isDestinationToken": false,
    "isTokenListLoading": false,
    "network": {
      "chainId": "0xa",
      "name": "Optimism",
    },
    "tokenList": [
      {
        "address": "0x1f9840a85d5af5bf1d1762f925bdaddc4201f123",
        "chainId": "0x1",
        "decimals": 18,
        "image": "https://example.com/image.png",
        "symbol": "UNI",
      },
    ],
  },
]
`;

exports[`AssetPickerModal token filtering should filter tokens by address 1`] = `
[
  {
    "asset": undefined,
    "assetItemProps": {
      "isTitleHidden": false,
      "isTitleNetworkName": false,
    },
    "handleAssetChange": [Function],
    "isDestinationToken": false,
    "isTokenListLoading": false,
    "network": {
      "chainId": "0xa",
      "name": "Optimism",
    },
    "tokenList": [
      {
        "address": "0x1f9840a85d5af5bf1d1762f925bdaddc4201f984",
        "balance": "0x56bc75e2d63100000",
        "chainId": "0x1",
        "decimals": 18,
        "image": undefined,
        "isNative": false,
        "name": undefined,
        "symbol": "UNI",
        "type": "TOKEN",
      },
    ],
  },
]
`;

exports[`AssetPickerModal token filtering should filter tokens by address 2`] = `
[
  {
    "asset": undefined,
    "assetItemProps": {
      "isTitleHidden": false,
      "isTitleNetworkName": false,
    },
    "handleAssetChange": [Function],
    "isDestinationToken": false,
    "isTokenListLoading": false,
    "network": {
      "chainId": "0xa",
      "name": "Optimism",
    },
    "tokenList": [
      {
        "address": "0x1f9840a85d5af5bf1d1762f925bdaddc4201f984",
        "balance": "0x56bc75e2d63100000",
        "chainId": "0x1",
        "decimals": 18,
        "image": undefined,
        "isNative": false,
        "name": undefined,
        "symbol": "UNI",
        "type": "TOKEN",
      },
    ],
  },
]
`;

exports[`AssetPickerModal token filtering should filter tokens by chain when multichain network is selected 1`] = `
[
  {
    "asset": undefined,
    "assetItemProps": {
      "isTitleHidden": false,
      "isTitleNetworkName": false,
    },
    "handleAssetChange": [Function],
    "isDestinationToken": false,
    "isTokenListLoading": false,
    "network": {
      "chainId": "0x89",
      "name": "Polygon",
    },
    "tokenList": [
      {
        "address": "0x2791bca1f2de4661ed88a30c99a7a9449aa84174",
        "balance": "0x2faf080",
        "chainId": "0x89",
        "decimals": 6,
        "image": undefined,
        "isNative": false,
        "name": undefined,
        "symbol": "USDC",
        "type": "TOKEN",
      },
      {
        "address": "",
        "balance": "1000",
        "chainId": "0x89",
        "decimals": 18,
        "image": {},
        "name": "ETH",
        "string": undefined,
        "symbol": "ETH",
        "type": "NATIVE",
      },
    ],
  },
]
`;

exports[`AssetPickerModal token filtering should filter tokens by symbol 1`] = `
[
  {
    "asset": undefined,
    "assetItemProps": {
      "isTitleHidden": false,
      "isTitleNetworkName": false,
    },
    "handleAssetChange": [Function],
    "isDestinationToken": false,
    "isTokenListLoading": false,
    "network": {
      "chainId": "0xa",
      "name": "Optimism",
    },
    "tokenList": [
      {
        "address": "0x1f9840a85d5af5bf1d1762f925bdaddc4201f984",
        "balance": "0x56bc75e2d63100000",
        "chainId": "0x1",
        "decimals": 18,
        "image": undefined,
        "isNative": false,
        "name": undefined,
        "symbol": "UNI",
        "type": "TOKEN",
      },
    ],
  },
]
`;

exports[`AssetPickerModal token filtering should handle case-insensitive search 1`] = `
[
  {
    "asset": undefined,
    "assetItemProps": {
      "isTitleHidden": false,
      "isTitleNetworkName": false,
    },
    "handleAssetChange": [Function],
    "isDestinationToken": false,
    "isTokenListLoading": false,
    "network": {
      "chainId": "0xa",
      "name": "Optimism",
    },
    "tokenList": [
      {
        "address": "0x1f9840a85d5af5bf1d1762f925bdaddc4201f984",
        "balance": "0x56bc75e2d63100000",
        "chainId": "0x1",
        "decimals": 18,
        "image": undefined,
        "isNative": false,
        "name": undefined,
        "symbol": "UNI",
        "type": "TOKEN",
      },
    ],
  },
]
`;

exports[`AssetPickerModal token filtering should handle case-insensitive search 2`] = `
[
  {
    "asset": undefined,
    "assetItemProps": {
      "isTitleHidden": false,
      "isTitleNetworkName": false,
    },
    "handleAssetChange": [Function],
    "isDestinationToken": false,
    "isTokenListLoading": false,
    "network": {
      "chainId": "0xa",
      "name": "Optimism",
    },
    "tokenList": [
      {
        "address": "0x1f9840a85d5af5bf1d1762f925bdaddc4201f984",
        "balance": "0x56bc75e2d63100000",
        "chainId": "0x1",
        "decimals": 18,
        "image": undefined,
        "isNative": false,
        "name": undefined,
        "symbol": "UNI",
        "type": "TOKEN",
      },
    ],
  },
]
`;

exports[`AssetPickerModal token filtering should only show tokens with balances in send mode 1`] = `
[
  {
    "asset": undefined,
    "assetItemProps": {
      "isTitleHidden": false,
      "isTitleNetworkName": false,
    },
    "handleAssetChange": [Function],
    "isDestinationToken": false,
    "isTokenListLoading": false,
    "network": {
      "chainId": "0xa",
      "name": "Optimism",
    },
    "tokenList": [
      {
        "address": "0x1f9840a85d5af5bf1d1762f925bdaddc4201f985",
        "balance": "0x989680",
        "chainId": "0xa",
        "decimals": 6,
        "image": undefined,
        "isNative": false,
        "name": undefined,
        "symbol": "USDC",
        "type": "TOKEN",
      },
      {
        "address": "",
        "balance": "1000",
        "chainId": "0xa",
        "decimals": 18,
        "image": {},
        "name": "ETH",
        "string": undefined,
        "symbol": "ETH",
        "type": "NATIVE",
      },
    ],
  },
]
`;

exports[`AssetPickerModal token filtering should only show tokens with balances in send mode 2`] = `
[
  {
    "asset": undefined,
    "assetItemProps": {
      "isTitleHidden": false,
      "isTitleNetworkName": false,
    },
    "handleAssetChange": [Function],
    "isDestinationToken": false,
    "isTokenListLoading": false,
    "network": {
      "chainId": "0xa",
      "name": "Optimism",
    },
    "tokenList": [
      {
        "address": "0x1f9840a85d5af5bf1d1762f925bdaddc4201f985",
        "balance": "0x989680",
        "chainId": "0xa",
        "decimals": 6,
        "image": undefined,
        "isNative": false,
        "name": undefined,
        "symbol": "USDC",
        "type": "TOKEN",
      },
      {
        "address": "",
        "balance": "1000",
        "chainId": "0xa",
        "decimals": 18,
        "image": {},
        "name": "ETH",
        "string": undefined,
        "symbol": "ETH",
        "type": "NATIVE",
      },
    ],
  },
]
`;

exports[`AssetPickerModal token filtering should render all tokens from multiple chains 1`] = `
[
  {
    "asset": undefined,
    "assetItemProps": {
      "isTitleHidden": false,
      "isTitleNetworkName": false,
    },
    "handleAssetChange": [Function],
    "isDestinationToken": false,
    "isTokenListLoading": false,
    "network": {
      "chainId": "0xa",
      "name": "Optimism",
    },
    "tokenList": [
      {
        "address": "",
        "balance": "1.5",
        "chainId": "0x1",
        "decimals": 18,
        "image": "./images/eth_logo.svg",
        "isNative": true,
        "name": "ETH",
        "symbol": "ETH",
        "type": "NATIVE",
      },
      {
        "address": "0x1f9840a85d5af5bf1d1762f925bdaddc4201f984",
        "balance": "0x56bc75e2d63100000",
        "chainId": "0x1",
        "decimals": 18,
        "image": undefined,
        "isNative": false,
        "name": undefined,
        "symbol": "UNI",
        "type": "TOKEN",
      },
      {
        "address": "0x1f9840a85d5af5bf1d1762f925bdaddc4201f985",
        "balance": "0x989680",
        "chainId": "0xa",
        "decimals": 6,
        "image": undefined,
        "isNative": false,
        "name": undefined,
        "symbol": "USDC",
        "type": "TOKEN",
      },
      {
        "address": "0x2791bca1f2de4661ed88a30c99a7a9449aa84174",
        "balance": "0x2faf080",
        "chainId": "0x89",
        "decimals": 6,
        "image": undefined,
        "isNative": false,
        "name": undefined,
        "symbol": "USDC",
        "type": "TOKEN",
      },
      {
        "address": "",
        "balance": "1000",
        "chainId": "0xa",
        "decimals": 18,
        "image": {},
        "name": "ETH",
        "string": undefined,
        "symbol": "ETH",
        "type": "NATIVE",
      },
    ],
  },
]
`;

exports[`AssetPickerModal token filtering should render all tokens from single chain 1`] = `
[
  {
    "asset": undefined,
    "assetItemProps": {
      "isTitleHidden": false,
      "isTitleNetworkName": false,
    },
    "handleAssetChange": [Function],
    "isDestinationToken": false,
    "isTokenListLoading": false,
    "network": {
      "chainId": "0x1",
      "name": "Ethereum Mainnet",
    },
    "tokenList": [
      {
        "address": "",
        "balance": "1.5",
        "chainId": "0x1",
        "decimals": 18,
        "image": "./images/eth_logo.svg",
        "isNative": true,
        "name": "ETH",
        "symbol": "ETH",
        "type": "NATIVE",
      },
      {
        "address": "0x1f9840a85d5af5bf1d1762f925bdaddc4201f984",
        "balance": "0x56bc75e2d63100000",
        "chainId": "0x1",
        "decimals": 18,
        "image": undefined,
        "isNative": false,
        "name": undefined,
        "symbol": "UNI",
        "type": "TOKEN",
      },
    ],
  },
]
`;

exports[`AssetPickerModal token filtering should respect MAX_UNOWNED_TOKENS_RENDERED limit 1`] = `
[
  {
    "asset": undefined,
    "assetItemProps": {
      "isTitleHidden": false,
      "isTitleNetworkName": false,
    },
    "handleAssetChange": [Function],
    "isDestinationToken": false,
    "isTokenListLoading": false,
    "network": {
      "chainId": "0xa",
      "name": "Optimism",
    },
    "tokenList": [
      {
        "address": "0xtoken0",
        "balance": "0x0",
        "chainId": "0x1",
        "decimals": 18,
        "isNative": false,
        "symbol": "TOKEN0",
        "type": "TOKEN",
      },
      {
        "address": "0xtoken1",
        "balance": "0x0",
        "chainId": "0x1",
        "decimals": 18,
        "isNative": false,
        "symbol": "TOKEN1",
        "type": "TOKEN",
      },
      {
        "address": "0xtoken2",
        "balance": "0x0",
        "chainId": "0x1",
        "decimals": 18,
        "isNative": false,
        "symbol": "TOKEN2",
        "type": "TOKEN",
      },
      {
        "address": "0xtoken3",
        "balance": "0x0",
        "chainId": "0x1",
        "decimals": 18,
        "isNative": false,
        "symbol": "TOKEN3",
        "type": "TOKEN",
      },
      {
        "address": "0xtoken4",
        "balance": "0x0",
        "chainId": "0x1",
        "decimals": 18,
        "isNative": false,
        "symbol": "TOKEN4",
        "type": "TOKEN",
      },
      {
        "address": "0xtoken5",
        "balance": "0x0",
        "chainId": "0x1",
        "decimals": 18,
        "isNative": false,
        "symbol": "TOKEN5",
        "type": "TOKEN",
      },
      {
        "address": "0xtoken6",
        "balance": "0x0",
        "chainId": "0x1",
        "decimals": 18,
        "isNative": false,
        "symbol": "TOKEN6",
        "type": "TOKEN",
      },
      {
        "address": "0xtoken7",
        "balance": "0x0",
        "chainId": "0x1",
        "decimals": 18,
        "isNative": false,
        "symbol": "TOKEN7",
        "type": "TOKEN",
      },
      {
        "address": "0xtoken8",
        "balance": "0x0",
        "chainId": "0x1",
        "decimals": 18,
        "isNative": false,
        "symbol": "TOKEN8",
        "type": "TOKEN",
      },
      {
        "address": "0xtoken9",
        "balance": "0x0",
        "chainId": "0x1",
        "decimals": 18,
        "isNative": false,
        "symbol": "TOKEN9",
        "type": "TOKEN",
      },
      {
        "address": "0xtoken10",
        "balance": "0x0",
        "chainId": "0x1",
        "decimals": 18,
        "isNative": false,
        "symbol": "TOKEN10",
        "type": "TOKEN",
      },
      {
        "address": "0xtoken11",
        "balance": "0x0",
        "chainId": "0x1",
        "decimals": 18,
        "isNative": false,
        "symbol": "TOKEN11",
        "type": "TOKEN",
      },
      {
        "address": "0xtoken12",
        "balance": "0x0",
        "chainId": "0x1",
        "decimals": 18,
        "isNative": false,
        "symbol": "TOKEN12",
        "type": "TOKEN",
      },
      {
        "address": "0xtoken13",
        "balance": "0x0",
        "chainId": "0x1",
        "decimals": 18,
        "isNative": false,
        "symbol": "TOKEN13",
        "type": "TOKEN",
      },
      {
        "address": "0xtoken14",
        "balance": "0x0",
        "chainId": "0x1",
        "decimals": 18,
        "isNative": false,
        "symbol": "TOKEN14",
        "type": "TOKEN",
      },
      {
        "address": "0xtoken15",
        "balance": "0x0",
        "chainId": "0x1",
        "decimals": 18,
        "isNative": false,
        "symbol": "TOKEN15",
        "type": "TOKEN",
      },
      {
        "address": "0xtoken16",
        "balance": "0x0",
        "chainId": "0x1",
        "decimals": 18,
        "isNative": false,
        "symbol": "TOKEN16",
        "type": "TOKEN",
      },
      {
        "address": "0xtoken17",
        "balance": "0x0",
        "chainId": "0x1",
        "decimals": 18,
        "isNative": false,
        "symbol": "TOKEN17",
        "type": "TOKEN",
      },
      {
        "address": "0xtoken18",
        "balance": "0x0",
        "chainId": "0x1",
        "decimals": 18,
        "isNative": false,
        "symbol": "TOKEN18",
        "type": "TOKEN",
      },
      {
        "address": "0xtoken19",
        "balance": "0x0",
        "chainId": "0x1",
        "decimals": 18,
        "isNative": false,
        "symbol": "TOKEN19",
        "type": "TOKEN",
      },
      {
        "address": "0xtoken20",
        "balance": "0x0",
        "chainId": "0x1",
        "decimals": 18,
        "isNative": false,
        "symbol": "TOKEN20",
        "type": "TOKEN",
      },
      {
        "address": "0xtoken21",
        "balance": "0x0",
        "chainId": "0x1",
        "decimals": 18,
        "isNative": false,
        "symbol": "TOKEN21",
        "type": "TOKEN",
      },
      {
        "address": "0xtoken22",
        "balance": "0x0",
        "chainId": "0x1",
        "decimals": 18,
        "isNative": false,
        "symbol": "TOKEN22",
        "type": "TOKEN",
      },
      {
        "address": "0xtoken23",
        "balance": "0x0",
        "chainId": "0x1",
        "decimals": 18,
        "isNative": false,
        "symbol": "TOKEN23",
        "type": "TOKEN",
      },
      {
        "address": "0xtoken24",
        "balance": "0x0",
        "chainId": "0x1",
        "decimals": 18,
        "isNative": false,
        "symbol": "TOKEN24",
        "type": "TOKEN",
      },
      {
        "address": "0xtoken25",
        "balance": "0x0",
        "chainId": "0x1",
        "decimals": 18,
        "isNative": false,
        "symbol": "TOKEN25",
        "type": "TOKEN",
      },
      {
        "address": "0xtoken26",
        "balance": "0x0",
        "chainId": "0x1",
        "decimals": 18,
        "isNative": false,
        "symbol": "TOKEN26",
        "type": "TOKEN",
      },
      {
        "address": "0xtoken27",
        "balance": "0x0",
        "chainId": "0x1",
        "decimals": 18,
        "isNative": false,
        "symbol": "TOKEN27",
        "type": "TOKEN",
      },
      {
        "address": "0xtoken28",
        "balance": "0x0",
        "chainId": "0x1",
        "decimals": 18,
        "isNative": false,
        "symbol": "TOKEN28",
        "type": "TOKEN",
      },
      {
        "address": "0xtoken29",
        "balance": "0x0",
        "chainId": "0x1",
        "decimals": 18,
        "isNative": false,
        "symbol": "TOKEN29",
        "type": "TOKEN",
      },
      {
        "address": "0xtoken30",
        "balance": "0x0",
        "chainId": "0x1",
        "decimals": 18,
        "isNative": false,
        "symbol": "TOKEN30",
        "type": "TOKEN",
      },
    ],
  },
]
`;

exports[`AssetPickerModal token filtering should show all tokens when search query is cleared 1`] = `
[
  {
    "asset": undefined,
    "assetItemProps": {
      "isTitleHidden": false,
      "isTitleNetworkName": false,
    },
    "handleAssetChange": [Function],
    "isDestinationToken": false,
    "isTokenListLoading": false,
    "network": {
      "chainId": "0xa",
      "name": "Optimism",
    },
    "tokenList": [
      {
        "address": "0x1f9840a85d5af5bf1d1762f925bdaddc4201f984",
        "balance": "0x56bc75e2d63100000",
        "chainId": "0x1",
        "decimals": 18,
        "image": undefined,
        "isNative": false,
        "name": undefined,
        "symbol": "UNI",
        "type": "TOKEN",
      },
    ],
  },
]
`;

exports[`AssetPickerModal token filtering should show all tokens when search query is cleared 2`] = `
[
  {
    "asset": undefined,
    "assetItemProps": {
      "isTitleHidden": false,
      "isTitleNetworkName": false,
    },
    "handleAssetChange": [Function],
    "isDestinationToken": false,
    "isTokenListLoading": false,
    "network": {
      "chainId": "0xa",
      "name": "Optimism",
    },
    "tokenList": [
      {
        "address": "",
        "balance": "1.5",
        "chainId": "0x1",
        "decimals": 18,
        "image": "./images/eth_logo.svg",
        "isNative": true,
        "name": "ETH",
        "symbol": "ETH",
        "type": "NATIVE",
      },
      {
        "address": "0x1f9840a85d5af5bf1d1762f925bdaddc4201f984",
        "balance": "0x56bc75e2d63100000",
        "chainId": "0x1",
        "decimals": 18,
        "image": undefined,
        "isNative": false,
        "name": undefined,
        "symbol": "UNI",
        "type": "TOKEN",
      },
      {
        "address": "0x1f9840a85d5af5bf1d1762f925bdaddc4201f985",
        "balance": "0x989680",
        "chainId": "0xa",
        "decimals": 6,
        "image": undefined,
        "isNative": false,
        "name": undefined,
        "symbol": "USDC",
        "type": "TOKEN",
      },
      {
        "address": "0x2791bca1f2de4661ed88a30c99a7a9449aa84174",
        "balance": "0x2faf080",
        "chainId": "0x89",
        "decimals": 6,
        "image": undefined,
        "isNative": false,
        "name": undefined,
        "symbol": "USDC",
        "type": "TOKEN",
      },
      {
        "address": "",
        "balance": "1000",
        "chainId": "0xa",
        "decimals": 18,
        "image": {},
        "name": "ETH",
        "string": undefined,
        "symbol": "ETH",
        "type": "NATIVE",
      },
    ],
  },
]
`;

exports[`AssetPickerModal token filtering should show selected token first when selected network is active 1`] = `
[
  {
    "asset": {
      "address": "NEWTOKEN",
      "chainId": "0xa",
      "image": "image.png",
      "symbol": "USDT",
      "type": "TOKEN",
    },
    "assetItemProps": {
      "isTitleHidden": false,
      "isTitleNetworkName": false,
    },
    "handleAssetChange": [Function],
    "isDestinationToken": false,
    "isTokenListLoading": false,
    "network": {
      "chainId": "0xa",
      "name": "Optimism",
    },
    "tokenList": [
      {
        "address": "",
        "balance": "1.5",
        "chainId": "0x1",
        "decimals": 18,
        "image": "./images/eth_logo.svg",
        "isNative": true,
        "name": "ETH",
        "symbol": "ETH",
        "type": "NATIVE",
      },
      {
        "address": "0x1f9840a85d5af5bf1d1762f925bdaddc4201f984",
        "balance": "0x56bc75e2d63100000",
        "chainId": "0x1",
        "decimals": 18,
        "image": undefined,
        "isNative": false,
        "name": undefined,
        "symbol": "UNI",
        "type": "TOKEN",
      },
      {
        "address": "0x1f9840a85d5af5bf1d1762f925bdaddc4201f985",
        "balance": "0x989680",
        "chainId": "0xa",
        "decimals": 6,
        "image": undefined,
        "isNative": false,
        "name": undefined,
        "symbol": "USDC",
        "type": "TOKEN",
      },
      {
        "address": "0x2791bca1f2de4661ed88a30c99a7a9449aa84174",
        "balance": "0x2faf080",
        "chainId": "0x89",
        "decimals": 6,
        "image": undefined,
        "isNative": false,
        "name": undefined,
        "symbol": "USDC",
        "type": "TOKEN",
      },
      {
        "address": "",
        "balance": "1000",
        "chainId": "0xa",
        "decimals": 18,
        "image": {},
        "name": "ETH",
        "string": undefined,
        "symbol": "ETH",
        "type": "NATIVE",
      },
    ],
  },
]
`;

exports[`AssetPickerModal token filtering should show selected token first when selected network is not active 1`] = `
[
  {
    "asset": {
      "address": "NEWTOKEN",
      "chainId": "0x89",
      "image": "image.png",
      "symbol": "USDT",
      "type": "TOKEN",
    },
    "assetItemProps": {
      "isTitleHidden": false,
      "isTitleNetworkName": false,
    },
    "handleAssetChange": [Function],
    "isDestinationToken": false,
    "isTokenListLoading": false,
    "network": {
      "chainId": "0x89",
      "name": "Polygon",
    },
    "tokenList": [
      {
        "address": "NEWTOKEN",
        "chainId": "0x89",
        "image": "image.png",
        "symbol": "USDT",
        "type": "TOKEN",
      },
      {
        "address": "0x2791bca1f2de4661ed88a30c99a7a9449aa84174",
        "balance": "50",
        "chainId": "0x89",
        "decimals": 6,
        "isNative": false,
        "symbol": "USDC",
        "type": "TOKEN",
      },
    ],
  },
]
`;
